style.css
@font-face {
    src: url("fonts/NoContinue.ttf");
    font-family: "No Continue";
}

* {
    font-size: 1.7rem;
    font-family: No Continue;

    color: #FFFFFF;
    background-color: #181818;
}

h1 {
    margin: 0.0rem;
    font-size: 2.0rem;
    font-weight: normal;
}

body {
    overflow: hidden;
}

body, html {
    margin: 0;
    height: 100%;
}

body, .vertical {
    gap: 0.8rem;
    display: flex;
    flex-direction: column;
}

input, button {
    outline: none;
    padding: 1.0rem;

    border: 3px solid #606060;
    border-radius: 0.3rem;

    background-color: #303030;
}

button:hover {
    background-color: #404040;
}

.quest {
    cursor: default;
    padding: 1.0rem;

    border: 3px solid #606060;
    border-radius: 0.3rem;
}

.stretch {
    width: 100%;
}

.horizontal {
    gap: 0.8rem;
    display: flex;
    align-items: center;
}

.notification {
    display: flex;
    padding: 1.0rem;

    border: 3px solid #606060;
    border-radius: 0.3rem;
}

